deploy/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-cli
  labels:
    app.kubernetes.io/instance: bitwarden-cli
    app.kubernetes.io/name: bitwarden-cli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-cli
      app.kubernetes.io/instance: bitwarden-cli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden-cli
        app.kubernetes.io/instance: bitwarden-cli
    spec:
      serviceAccount: bitwarden-cli
      securityContext:
        fsGroup: 7001
        runAsGroup: 7001
        runAsNonRoot: true
        runAsUser: 7001
      containers:
        - name: bitwarden-cli
          image: ghcr.io/oliverziegert/external-secrets-bitwarden:1.0.6
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8087
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 100Mi
          livenessProbe:
            exec:
              command:
                - curl
                - -s
                - -X
                - POST
                - http://127.0.0.1:8087/sync
            initialDelaySeconds: 20
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 120
          readinessProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 20
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 10
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
